# Zygisk-Loader

./: COMMITS_BY_VERSION.md  README.md  build.gradle  module.gradle  settings.gradle  update.json
.github/workflows/: android.yml
module/: build.gradle
module/rust/: Cargo.toml
module/rust/src/: lib.rs  macros.rs  module.rs
module/src/main/c/: CMakeLists.txt  main.c
module/template/: customize.sh  module.prop
zygiskloader/magisk_module/: module.prop
